complete about me section of portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,9 @@
     <div class="hero"></div>
 
     <footer>
-      <p>Copyright © 2023 Mariah-Lara Portfolio</p>
+      <p>Copyright © 2023 Mariah-Lara Portfolio
+        Made with love 💖
+      </p>
     </footer>
     
   </body>
