fix sizing on resume

--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,7 @@
     <div class="hero"></div>
 
     <footer>
-      <p>Copyright © 2023 Mariah-Lara Portfolio
-        Made with love 💖
+      <p>Copyright © 2023 Mariah-Lara. This Portfolio is made with love 💖
       </p>
     </footer>
     
